# fediverse

./: pyproject.toml
pelican/plugins/fediverse/: fediverse.py
