[project]
name = "pelican-fediverse"
version = "1.0.3"
description = "Pelican plugin to publish content on the Fediverse"
authors = [{name = "Maurizio Paglia"}, {name = "Fipaddict"}]
license = {text = "GPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "fediverse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8.1,<4.0"
dependencies = [
	"pelican>=4.11",
    "Mastodon.py",
	"lxml>=5.4.0",
	"python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/pelican-plugins/fediverse"
"Issue Tracker" = "https://github.com/pelican-plugins/fediverse/issues"
Funding = "https://donate.getpelican.com/"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["pelican/plugins/fediverse/fediverse.py"]
